--- a/src/app/trainee/trainee-form/trainee-form.component.html
+++ b/src/app/trainee/trainee-form/trainee-form.component.html
@@ -64,7 +64,7 @@
                 <div formArrayName="skills" *ngFor="let skill of getControls(); let i = index">
                     <div [formGroupName]="i" class="_skillform">
                         <div class="_deletebtndiv" title="delet skill" *ngIf="getControls().length>1">
-                            <button (click)="onDeletSkill(i)"><mat-icon class="_deletbtn">delete_forever</mat-icon></button>
+                            <button (click)="onDeletSkill(i,skill)"><mat-icon class="_deletbtn">delete_forever</mat-icon></button>
                         </div>
                         <div class="row">
                             <mat-form-field appearance="outline" class="_Skillinputs">
